--- a/.github/workflows/update-html.yml
+++ b/.github/workflows/update-html.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install Pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - name: Convert README.md to HTML
         run: |
           pandoc -s README.md -o content.html
