--- a/.github/workflows/update-html.yml
+++ b/.github/workflows/update-html.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.GH_PAT }}
-          publish_dir: ./ 
+          github_token: ${{ secrets.GH_PAT }}
+          publish_dir: ./
